2011-04-09  Ivan Maidanski  <ivmai@mail.ru>

	* mallocx.c (GC_malloc_uncollectable): Move to malloc.c (since
	it is used internally in some places).

2011-04-09  Ivan Maidanski  <ivmai@mail.ru>

	* dbg_mlc.c (GC_register_finalizer_no_order): Remove redundant
	declaration.
	* dbg_mlc.c (GC_debug_malloc_replacement,
	GC_debug_realloc_replacement): Rename RA to GC_DBG_RA.
	* malloc.c (GC_debug_malloc_replacement): Ditto.
	* mallocx.c (GC_debug_realloc_replacement): Ditto.
	* dbg_mlc.c (GC_store_debug_info): Move proto from dbg_mlc.h.
	* malloc.c (GC_strdup, GC_strndup, GC_wcsdup): Move to mallocx.c.
	* malloc.c: Include errno.h only REDIRECT_MALLOC; remove redundant
	includes of string.h.
	* mallocx.c: Include string.h (for GC_strdup).
	* include/private/dbg_mlc.h (GC_store_debug_info): Move declaration
	to dbg_mlc.c.
	* include/private/gc_locks.h (UNCOND_LOCK, UNCOND_UNLOCK): Remove
	redundant trailing ';'.
	* include/private/gc_priv.h (START_WORLD, COND_DUMP): Ditto.
	* include/private/gc_locks.h (LOCK, UNLOCK): Place opening '{'
	properly.
	* include/private/gc_priv.h (GC_DBG_RA): Move from dbg_mlc.c,
	malloc.c, mallocx.c.

2011-04-07  Ivan Maidanski  <ivmai@mail.ru>

	* alloc.c (GC_check_heap, GC_print_all_smashed): Move the
	definition from misc.c.
	* dbg_mlc.c (GC_debug_malloc_atomic_uncollectable): Define as
	public.
	* include/gc.h (GC_debug_malloc_atomic_uncollectable): Declare.
	* include/gc.h (GC_MALLOC_ATOMIC_UNCOLLECTABLE): Define new public
	macro.
	* dbg_mlc.c (MAX_SMASHED): Don't define if already set.
	* reclaim.c (MAX_LEAKED): Ditto.
	* dbg_mlc.c (GC_add_smashed): Add FIXME about the concurrent
	access to the global array.
	* reclaim.c (GC_add_leaked): Ditto.
	* misc.c (GC_print_back_height): Set on if GC_PRINT_BACK_HEIGHT
	(new macro) is defined.
	* doc/README.macros (GC_PRINT_BACK_HEIGHT): Document.
	* misc.c (GC_dump_regularly, GC_init): Replace 0/1 for
	GC_dump_regularly and GC_print_back_height variables with
	FALSE/TRUE.